added home to minecraft page

--- a/public/Minecraft.html
+++ b/public/Minecraft.html
@@ -137,6 +137,8 @@ body
         </style>
     </head>
     <body>
+        <br><br>
+        <a href="/mainpage" style="color:white; margin:0 auto;">Home</a>
         <div class="div1">
             <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTSbWOL6AqgFI9M4eblTENTH_X5OYkzBMpvZA&s" class="image">
             <div class="div">
