--- a/public/adventure.html
+++ b/public/adventure.html
@@ -41,6 +41,7 @@
 
 <body id="body">
     <h1 id="title">Adventure Games</h1>
+    &nbsp;&nbsp;&nbsp;
     <a href="/mainpage" style="color:white; margin:0 auto;">Home</a>
     <br>
     <br>
