--- a/public/racing.html
+++ b/public/racing.html
@@ -41,6 +41,7 @@
 
 <body id="body">
     <h1 id="title">Racing Games</h1>
+    &nbsp;&nbsp;&nbsp;
     <a href="/mainpage" style="color:white;">Home</a>
     <br>
     <br>
